# AI-Creator

./: main.py  pyproject.toml  readme.md  requirements.txt
dataset/mad_svc/: 爱人错过.mid  爱人错过.txt
dataset/user_text_source/: harry_potter.txt
dataset/video_edit/writing_data/: news_present_style.txt  present_style.txt
dataset/video_edit/writing_data/.ipynb_checkpoints/: news_present_style-checkpoint.txt
environment/agents/: base.py  comm_agent.py  cross_talk.py  mad_svc.py  mad_tts.py  multi.py  news_agent.py  rhythm_agent.py  talk_show.py
environment/communication/: message.py
environment/config/: comm_agent.yml  config.py  config.yml  cross_talk.yml  llm.py  mad_svc.yml  mad_tts.yml  news_agent.yml  rhythm_agent.yml  talk_show.yml
environment/roles/: loudness_normalizer.py  resampler.py  separator.py  slicer.py  transcriber.py  vid_adapter.py  vid_preloader.py
environment/roles/cross_talk/: cross_talk_adapter.py  cross_talk_subtitle.py  cross_talk_synth.py  cross_talk_translator.py
environment/roles/mad_svc/: mad_svc_analyzer.py  mad_svc_annotator.py  mad_svc_coverist.py  mad_svc_mixer.py  mad_svc_single.py  mad_svc_spliter.py  mad_svc_subtitle.py  mad_svc_translator.py
environment/roles/mad_tts/: mad_tts_aligner.py  mad_tts_combiner.py  mad_tts_infer.py  mad_tts_slicer.py  mad_tts_subtitle.py  mad_tts_writer.py
environment/roles/talk_show/: talk_show_adapter.py  talk_show_subtitle.py  talk_show_synth.py  talk_show_translator.py
environment/roles/vid_comm/: comm_editer.py  comm_editor.py  comm_loader.py  vid_editer.py  vid_editor.py  vid_searcher.py  vid_subtitler.py  voice_maker.py
environment/roles/vid_news/: audio_writer.py  news_editer.py  news_editor.py  news_loader.py  vid_editer.py  vid_editor.py  vid_searcher.py  vid_subtitler.py  voice_maker.py
environment/roles/vid_rhythm/: music_filter.py  story_editor.py  vid_editer.py  vid_searcher.py
tools/DiffSinger/: diff.py  requirements.txt
tools/DiffSinger/data/: 有何不可.json
tools/DiffSinger/inference/svs/: base_svs_infer.py  ds_e2e.py
tools/DiffSinger/tasks/tts/: fs2.py
tools/DiffSinger/utils/: __init__.py  audio.py  hparams.py
tools/audio-preprocess/: LICENSE  README.md  README.zh.md  fap-complete.zsh  pyproject.toml
tools/audio-preprocess/fish_audio_preprocess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/audio-preprocess/fish_audio_preprocess/cli/: __main__.py  convert_to_wav.py  frequency.py  length.py  loudness_norm.py  merge_lab.py  merge_short.py  resample.py  separate_audio.py  slice_audio.py  transcribe.py
tools/audio-preprocess/fish_audio_preprocess/utils/: file.py  loudness_norm.py  separate_audio.py  slice_audio.py  slice_audio_v2.py  transcribe.py
tools/audio-preprocess/tools/: lint.py
tools/fish-speech/temp/: codes_0.npy
tools/seed-vc/: inference.py
tools/videorag/: __init__.py  _opcontent.py  _utils.py  base.py  videoragcontent.py
tools/videorag/_storage/: __init__.py  vdb_nanovectordb.py
tools/videorag/_videoutil/: __init__.py  asr.py  caption.py  split.py
